tests/paczka1/small_fuzzy/77434622.err
Error in line 3: QkPTaf7ap A965 52,6
Error in line 14: A316 A316 25,20
